# Tagle

./: .gitignore  Makefile.am  configure.ac  tagle-config.h
data/: Makefile.am  tagle-main-window.ui  tagle-menu.ui
src/: Makefile.am  log.vala  main.vala  tagle-id3.vala  tagle-logger.vala  tagle-window.vala
src/vapi/: config.vapi
tests/: Makefile.am  tagle-id3-test.vala
