AC_INIT([Tagle], 1.0)
AM_INIT_AUTOMAKE

AM_CONFIG_HEADER(tagle-config.h)

AM_PROG_VALAC([0.10.0])
AC_PROG_CC

GLIB_REQUIRED=2.26.0
GOBJECT_REQUIRED=2.12.0
GTK_REQUIRED=2.19.1

PKG_CHECK_MODULES(TAGLE, \
  glib-2.0 >= $GLIB_REQUIRED \
  gobject-2.0 >= $GOBJECT_REQUIRED \
  )
AC_SUBST(TAGLE_CFLAGS)
AC_SUBST(TAGLE_LIBS)

PKG_CHECK_MODULES(TAGLE_GTK, \
  gtk+-2.0 >= $GTK_REQUIRED \
  )
AC_SUBST(TAGLE_GTK_CFLAGS)
AC_SUBST(TAGLE_GTK_LIBS)

AC_OUTPUT([
Makefile
data/Makefile
src/Makefile
])
